--- a/trunk/poc2/monografia/abstract.tex
+++ b/trunk/poc2/monografia/abstract.tex
@@ -1,6 +1,6 @@
 \begin{abstract}
 
-With the increasing demand for 3D models in areas such as games, the procedural content generation is becoming increasingly popular, in order to reduce costs and development time. With procedural techniques, it is possible to create a large number of models modifying a few parameters on the algorithms responsable for the generation. This work intends to use the power of the modern video cards (GPU) to generate pseudo infinite terrains, created as they user navigate through the scene. A comparative study between GPU generation and CPU is made, in order to evaluate the performance of the two different architectures.
+With the increasing demand for 3D models in areas such as games, the procedural content generation is becoming increasingly popular, in order to reduce costs and development time. With procedural techniques, it is possible to create a large number of models modifying a few parameters on the algorithms responsable for the generation. This work intends to use the power of the modern video cards (GPU) to generate pseudo infinite terrains, created as the user navigates through the scene. A comparative study between GPU generation and CPU is made, in order to evaluate the performance of the two different architectures.
 
     \textbf{Keywords}: Procedural content generation, terrain, gpu.
 \end{abstract}
