--- a/trunk/poc2/monografia/conclusao.tex
+++ b/trunk/poc2/monografia/conclusao.tex
@@ -11,4 +11,4 @@ Os resultados obtidos na geração procedural de terrenos na GPU mostram o poder d
 
 Um ponto a ser melhorado na geração procedural é quanto à heterogeneidade do terreno. Apesar de apresentar um resultado satisfatório para um local limitado, quando se olha o terreno como um todo, percebe-se que há uma semelhança muito grande entre os \emph{patchs}, diminuindo assim a ilusão de estar andando em algo realmente infinito.
 
-O sistema foi implementado sempre tendo em mente a sua utilização acoplado a outras aplicativos. Dessa forma, adotá-lo em um simulador ou \emph{game} demandaria pouco esforço, desde que o aplicativo utilize \emph{OpenGL}.
+O sistema foi implementado sempre tendo em mente a sua utilização acoplada a outras aplicativos. Dessa forma, adotá-lo em um simulador ou \emph{game} demandaria pouco esforço, desde que o aplicativo utilize \emph{OpenGL}.
