--- a/trunk/poc2/monografia/folharosto.tex
+++ b/trunk/poc2/monografia/folharosto.tex
@@ -12,7 +12,7 @@ Departamento de Ciência da Computação\\
 \begin{minipage}{.7\textwidth}
 \begin{center}
 \vspace{1cm}
-\textbf{Geração Procedural e Visualização de Terrenos Infinitos na GPU} \par
+\textbf{Geração Procedural e Visualização de Terrenos Pseudo-Infinitos na GPU} \par
 \vspace{2em}
 por \par
 \vspace{2em}
