--- a/trunk/poc2/monografia/monografia.tex
+++ b/trunk/poc2/monografia/monografia.tex
@@ -33,7 +33,9 @@
 \geometry{a4paper,left=3cm,right=2cm,top=3cm,bottom=2cm}
 
 
-%\hyphenation{a-pre-sen-ta-da e-di-to-res mo-de-los au-xi-li-\'a-lo abs-tra-ção ge-ra-ção re-a-lis-tas so-fre-rão geo-mé-tri-cas co-nhe-ci-men-to me-lho-rar}
+%\hyphenation{a-pre-sen-ta-da e-di-to-res mo-de-los au-xi-li-\'a-lo abs-tra-ção ge-ra-ção re-a-lis-tas so-fre-rão geo-mé-tri-cas co-nhe-ci-men-to me-lho-rar de-se-nha-dos}
+
+%\hyphenation{de-se-nha-dos ren-de-ri-za-\c{c}\~ao}
 
 %%
 %%	Ainda em teste
