--- a/trunk/poc2/monografia/resultados.tex
+++ b/trunk/poc2/monografia/resultados.tex
@@ -13,13 +13,13 @@ A Figura \ref{fig:heightmap2} mostra a renderização de uma cena apenas com a tex
 \end{figure}
 
 
-A Figura \ref{fig:deslocamento} mostra o mesmo mapa de altura, mas agora com o deslocamento dos vértices em no eixo \emph{z}.
+A Figura \ref{fig:deslocamento} mostra o mesmo mapa de altura, mas agora com o deslocamento dos vértices no eixo \emph{z}.
 \begin{figure}[H]
 	\center{\includegraphics[width=0.5\linewidth]{img/caps/deslocamento.png}}
 	\caption{\label{fig:deslocamento} Mapa de altura aplicado a um quadrado, deslocando a altura.}
 \end{figure}
 
-A Figura \ref{fig:blend} mostra agora a renderização da malha com texturas para simular grama, pedras, neve, etc.
+A Figura \ref{fig:blend} mostra agora a renderização da malha com cores para simular grama, pedras, neve, etc.
 \begin{figure}[H]
 	\center{\includegraphics[width=0.5\linewidth]{img/caps/blend.png}}
 	\caption{\label{fig:blend} Mapa de altura aplicado a um quadrado, deslocando a altura, e com texturas.}
@@ -31,7 +31,7 @@ A Figura \ref{fig:luz} mostra o resultado final, agora com a aplicação de ilumin
 	\caption{\label{fig:luz} Mapa de altura aplicado a um quadrado, deslocando a altura, com texturas, e iluminação.}
 \end{figure}
 
-Um vídeo demonstrando mostrando a navegação pelo terreno pode ser visto em \cite{youtube}.
+Um vídeo demonstrando a navegação pelo terreno pode ser visto em \cite{youtube}.
 
 
 \section{Testes de Desempenho}
