--- a/trunk/poc2/monografia/resumo.tex
+++ b/trunk/poc2/monografia/resumo.tex
@@ -1,5 +1,5 @@
 \begin{resumo}
-Com o aumento da demanda por modelos 3D em áreas como jogos eletrônicos, a geração procedural se faz cada vez mais necessária, para reduzir custos e tempo de desenvolvimento. Através de técnicas procedurais, é possível criar um grande número de modelos com a variação de alguns poucos parâmetros dos algoritmos responsáveis pela geração. Este trabalho tem como objetivo utilizar o poder das placas gráficas atuais (GPUs) para a geração de terrenos pseudo-infinitos, criados a medida em que o usuário navega pelo cenário. Um comparativo com geração de terrenos na CPU também é feito, com o objetivo de avaliar a performance das duas diferentes arquiteturas.
+Com o aumento da demanda por modelos 3D em áreas como jogos eletrônicos, a geração procedural se faz cada vez mais necessária, para reduzir custos e tempo de desenvolvimento. Através de técnicas procedurais, é possível criar um grande número de modelos com a variação de alguns poucos parâmetros dos algoritmos responsáveis pela geração. Este trabalho tem como objetivo utilizar o poder das placas gráficas atuais (GPUs) para a geração de terrenos pseudo-infinitos, criados a medida em que o usuário navega pelo cenário. Um comparativo com geração de terrenos na CPU também é feito, para avaliar a performance das duas diferentes arquiteturas.
 
     \textbf{Palavras-chave:} Geração procedural de conteúdo, terreno, gpu.
 \end{resumo}
