--- a/trunk/poc2/monografia/testeFPS.tex
+++ b/trunk/poc2/monografia/testeFPS.tex
@@ -30,6 +30,9 @@ A Tabela \ref{tabela:fps} mostra os tempos médios, mínimos e a média de \emph{FP
 \end{table}
 
 
+\newpage
+
+
 A Figura \ref{fig:fps} apresenta os tempos anteriores:
 \begin{figure}[H]
 	\center{\includegraphics[width=0.9\linewidth]{img/tempoFPS.png}}
