--- a/trunk/poc2/monografia/folharosto.tex
+++ b/trunk/poc2/monografia/folharosto.tex
@@ -18,7 +18,7 @@ por \par
 \vspace{2em}
 Fábio Markus Nunes Miranda\par
 \vspace{2em}
-Monografia de Projeto Orientado em Computação I \par
+Monografia de Projeto Orientado em Computação II \par
 \vspace{1em}
 \footnotesize{Apresentado como requisito da disciplina de Projeto Orientado em Computação II do Curso de Bacharelado em Ciência da Computação da UFMG} \par
 \vspace{2em}
