--- a/trunk/poc2/monografia/introducao.tex
+++ b/trunk/poc2/monografia/introducao.tex
@@ -21,7 +21,7 @@ A segunda parte, geração de terrenos proceduralmente, busca, através de algoritm
 \end{itemize}
 
 
-Este trabalho irá implementar soluções para a geração procedural de terrenos na GPU e também na CPU, com o objetivo de permitir ao usuário a navegação por um terreno pseudo-infinito, limitado apenas pela precisão dos tipos primitivos utilizados (\emph{double} e \emph{integer}). Além disso, será comparado a eficiência e velocidade das duas arquiteturas.
+O usuário poderá navegar por um terreno pseudo-infinito, limitado apenas pela precisão dos tipos primitivos utilizados (\emph{double} e \emph{integer}).
 
 
 \section{Organização}
