--- a/trunk/poc2/monografia/testeFPS.tex
+++ b/trunk/poc2/monografia/testeFPS.tex
@@ -42,4 +42,4 @@ A Figura \ref{fig:fps} apresenta os tempos anteriores:
 
 Como pode ser visto através do gráfico, a navegação pelo mundo, utilizando a geração dos terrenos na GPU, é muito mais fluida, sem quedas bruscas de \emph{FPS}, como nos \emph{frames} 3, 6, 9, 12, 14, 17, 20, 23, 26 e 29, graças às centenas de unidades de processamento presentes na GPU.
 
-Na geração pela CPU, tais quedas correspondem justamente aos momentos em que o sistema gera novos terrenos e podem significar um menor senso de imersão do usuário no mundo virtual.
+Na geração pela CPU, tais quedas correspondem justamente aos momentos em que o sistema gera novos terrenos e podem resultar em um menor senso de imersão do usuário no mundo virtual.
