--- a/trunk/poc2/monografia/monografia.bib
+++ b/trunk/poc2/monografia/monografia.bib
@@ -182,7 +182,7 @@ Science (IMADA).},
  
  @ARTICLE{carlucio,
  author = {Carlúcio S. Cordeiro and Luiz Chaimowicz},
- title = {Parallel Lazy Amplification},
+ title = {Parallel Lazy Amplification: Real-Time Procedural Modeling and Rendering of Multi-Terabyte Scenes on a Single PC},
  journal = {VII Brazilian Symposium on Computer Games and Digital Entertainment, 2008, Belo Horizonte. SBGames 2008},
  year = {2008}
  }
